--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         </main>
     </div>
 
+    <footer>Feito com <img src="assets/ph_heart-fill.svg" alt="Coração"></img> pelo Vinão</footer>
 </body>
 
 </html>
